@@ -54,9 +54,9 @@ struct _MimeEditDialogClass
 
 GType mime_edit_dialog_get_type	(void);
 
-GtkWidget *mime_edit_dialog_new	(GtkTreeModel *model,
+GObject *mime_edit_dialog_new	(GtkTreeModel *model,
 				 MimeTypeInfo *info);
-GtkWidget *mime_add_dialog_new	(GtkTreeModel *model, GtkWindow *parent,
+GObject *mime_add_dialog_new	(GtkTreeModel *model, GtkWindow *parent,
 				 char const *file_name);
 
 void mime_edit_dialog_get_app (GladeXML *glade, char const *mime_type,
