@@ -1,3 +1,7 @@
+2002-07-10  Jody Goldberg <jody@gnome.org>
+
+	* mime-edit-dialog.c (mime_edit_dialog_init) : set the icon here.
+
 2002-07-09  Jody Goldberg <jody@gnome.org>
 
 	* file-types-properties.glade : disable the use of category defaults
